Setting up some logic for the merged PR to promote to production.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -198,7 +198,7 @@ spec:
                     }
                     steps {
                         container('tools'){               
-                            echo "Tag Source Branch ${VERSION_BRANCH} and Set Version: ${VERSION_BUILD} [skip ci]"
+                            echo "Tag Source Branch ${VERSION_BRANCH} and Set Version: ${VERSION_CANDIDATE} [skip ci]"
 
                         }
                     }
@@ -227,7 +227,7 @@ spec:
                                 if(buildCompleted){
                                     echo "Deploy ${REGISTRY}/${IMAGE}:${VERSION_BUILD} to Stage Environment"
                                 } else if(env.CHANGE_BRANCH == 'release') {
-                                    echo "Deploy ${REGISTRY}/${IMAGE}:${VERSION} to Stage Environment"
+                                    echo "AFTER BUILD if PR was OPEN, Deploy ${REGISTRY}/${IMAGE}:${VERSION_CANDIDATE} as ${REGISTRY}/${IMAGE}:${VERSION_CANDIDATE}-${BRANCH_NAME}-${BUILD_NUMBER} to Stage Environment"
                                 }
                             }
                         }
@@ -243,12 +243,15 @@ spec:
                             branch 'master'
                         }
                     }
+                    environment {
+                        VERSION_CANDIDATE = sh(script: 'cat VERSION', returnStdout: true).trim()
+                        VERSION           = env.VERSION_CANDIDATE.substring(0, env.VERSION_CANDIDATE.indexOf('-'))
+                    }
                     steps {
                         container('tools'){      
-                            echo "Promote ${REGISTRY}/${IMAGE}:${VERSION} to Production Registry"           
+                            echo "Promote ${REGISTRY}/${IMAGE}:${VERSION} as ${IMAGE}:${VERSION} to Production Registry"           
                             echo "Deploy ${IMAGE}:${VERSION} to Prod Environment"
                             echo "Down-Merge Master into Release, THEN bump Release version no suffix [skip ci]"
-
                         }
                     }
                 }
