Change stage title.

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -179,7 +179,7 @@ spec:
                     }
                 }
 
-                stage('Tag Commit') {
+                stage('VERSION Commit') {
                     when {
                         anyOf {
                             allOf { 
