--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -199,7 +199,22 @@ spec:
                     steps {
                         container('tools'){               
                             echo "Tag Source Branch ${VERSION_BRANCH} and Set Version: ${VERSION_CANDIDATE} [skip ci]"
+                            sh "echo ${VERSION_CANDIDATE} > VERSION"
+                            sh "git add VERSION"
+                            sh "git commit -m \"[skip ci] Bump version to ${VERSION_CANDIDATE}\""
+                            sh "git push origin ${VERSION_BRANCH}"
                         }
+
+                        //container('tools'){
+                        //    sh "wget https://github.com/mikefarah/yq/releases/download/v4.9.6/yq_linux_amd64.tar.gz"
+                        //    sh "tar xvf yq_linux_amd64.tar.gz"
+                        //    sh "mv yq_linux_amd64 /usr/bin/yq"
+                        
+                        //    sh "chmod +x ./jenkins/scripts/bump_release_version.sh"
+                        //    sh "./jenkins/scripts/bump_release_version.sh"
+                        
+                        //}
+
                     }
                 }  
 
