--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -203,9 +203,11 @@ spec:
                     steps {
                         container('tools'){               
                             echo "Tag Source Branch ${VERSION_BRANCH} and Set Version: ${VERSION_CANDIDATE} [skip ci]"
-                            sh "echo ${VERSION_CANDIDATE} > VERSION"
                             sh "git config --global user.email \"${params.GIT_USER_EMAIL}\""
                             sh "git config --global user.name \"${params.GIT_USER_FULL_NAME}\""
+                            sh "git fetch"
+                            sh "git checkout ${VERSION_BRANCH}"
+                            sh "echo ${VERSION_CANDIDATE} > VERSION"
                             sh "git add VERSION"
                             sh "git commit -m \"[skip ci] Bump version to ${VERSION_CANDIDATE}\""
                             sh "git push origin ${VERSION_BRANCH}"
