Tap into gh-user

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -201,17 +201,22 @@ spec:
                         }
                     }
                     steps {
+
                         container('jnlp'){               
                             echo "Tag Source Branch ${VERSION_BRANCH} and Set Version: ${VERSION_CANDIDATE} [skip ci]"
-                            sh "git config --global user.email \"${params.GIT_USER_EMAIL}\""
-                            sh "git config --global user.name \"${params.GIT_USER_FULL_NAME}\""
-                            sh 'git config --global url."git@github.com:".insteadOf'
-                            sh "git fetch origin release"
-                            sh "git checkout ${VERSION_BRANCH}"
-                            sh "echo ${VERSION_CANDIDATE} > VERSION"
-                            sh "git add VERSION"
-                            sh "git commit -m \"[skip ci] Bump version to ${VERSION_CANDIDATE}\""
-                            sh "git push origin ${VERSION_BRANCH}"
+
+                            withCredentials([usernamePassword(credentialsId: 'jenkins-gh-user', usernameVariable: 'USERNAME', passwordVariable: 'PAT')]) {
+                                sh "git config --global user.email \"${params.GIT_USER_EMAIL}\""
+                                sh "git config --global user.name \"${params.GIT_USER_FULL_NAME}\""
+                                sh "git fetch origin release"
+                                sh "git checkout ${VERSION_BRANCH}"
+                                sh "echo ${VERSION_CANDIDATE} > VERSION"
+                                sh "git add VERSION"
+                                sh "git commit -m \"[skip ci] Bump version to ${VERSION_CANDIDATE}\""
+                                sh "git remote add origin https://${PAT}@github.com/redapt/favorite-beer.git"
+                                sh "git push origin ${VERSION_BRANCH}"
+                            }
+
                         }
 
                         //container('tools'){
