--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -102,7 +102,7 @@ spec:
                     steps {
                         container('tools'){           
                             sh "git pull origin --tags"
-                            sh "git describe --tags $(git rev-parse HEAD)"
+                            sh "git describe --tags ${TAG}"
                         }
                     }
                 }
