--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -301,7 +301,7 @@ spec:
                                 sh "git commit -m \"[skip ci] Tag and set master to ${VERSION}\""
                                 sh "git tag $VERSION"
                                 sh "git remote set-url origin https://$PAT@github.com/redapt/favorite-beer.git"
-                                sh "git push origin ${VERSION_BRANCH}" --tags
+                                sh "git push origin ${VERSION_BRANCH} --tags"
 
                                 sh "git fetch origin release"
                                 sh "git checkout release"
