--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -289,9 +289,11 @@ spec:
                                 sh "git config --global user.email \"${params.GIT_USER_EMAIL}\""
                                 sh "git config --global user.name \"${params.GIT_USER_FULL_NAME}\""
 
-                                sh "git checkout ${VERSION_BRANCH}"
+                                sh "git fetch origin release"
+                                sh "git fetch origin develop"
                                 sh "git remote set-url origin https://$PAT@github.com/redapt/favorite-beer.git"
 
+                                sh "git checkout ${VERSION_BRANCH}"
                                 sh "echo -n ${VERSION} > VERSION"
                                 sh "git add VERSION"
 
@@ -299,8 +301,7 @@ spec:
                                 sh "git tag $VERSION"
                                 sh "git push origin ${VERSION_BRANCH} --tags"
 
-                                sh "git fetch"
-                                
+
                                 sh "git checkout release"
                                 sh "git merge master"
                                 sh "echo -n ${NEXT_VERSION} > VERSION"
