--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -131,12 +131,12 @@ spec:
 
                                 sh '''
                                     aws ecr get-login-password --region us-east-2 | \
-                                      podman login \
+                                      podman --storage-driver=vfs --runroot /home/jenkins/ --root /home/jenkins login \
                                         --username AWS \
                                         --password-stdin \
                                         ${REGISTRY}
 
-                                    podman pull ${REGISTRY}/${IMAGE}:${LATEST_TAG}
+                                    podman --storage-driver=vfs --runroot /home/jenkins/ --root /home/jenkins pull ${REGISTRY}/${IMAGE}:${LATEST_TAG}
                                 '''
 
                             }
